--- a/toy-brick-fx-demo/pom.xml
+++ b/toy-brick-fx-demo/pom.xml
@@ -4,6 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <artifactId>toy-brick-fx-parent</artifactId>
+        <groupId>com.shinonometn</groupId>
+        <version>1.0</version>
+    </parent>
+
     <groupId>com.shinonometn</groupId>
     <artifactId>toy-brick-fx-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -21,11 +27,13 @@
             <artifactId>toy-brick-fx</artifactId>
             <version>1.0.1-SNAPSHOT</version>
         </dependency>
+
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test</artifactId>
