change build script language from groovy to kotlin

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,7 @@
 #Tue Sep 01 02:34:07 CST 2020
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.6.1-all.zip
+#
+# Upgrade gradle to 7.3.3, see: https://stackoverflow.com/questions/73342537/cannot-use-kotlin-1-7-10
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.3.3-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStorePath=wrapper/dists
